Bug 503742 - "Prefer color accuracy" doesn't apply to full screen video
Summary: "Prefer color accuracy" doesn't apply to full screen video
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.3.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-04 10:23 UTC by Sauf
Modified: 2025-05-10 09:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.6
Sentry Crash Report:


Attachments
screencast from Dolphin (127.76 KB, video/webm)
2025-05-04 10:23 UTC, Sauf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sauf 2025-05-04 10:23:51 UTC
Created attachment 180921 [details]
screencast from Dolphin

SUMMARY
When video is playing, "Prefer color accuracy" doesn't working.
I know it's trivial and actually Zamundaaa solved most of the issues of lack of API from AMD, but I reported maybe give a clue to improve it.

STEPS TO REPRODUCE
1. Enable night mode and Prefer color accuracy.
2. play a video in full screen (e.g using mpv, I uploaded sample video)

OBSERVED RESULT
Black and white line pattern disappears on sample video

EXPECTED RESULT
"Prefer color accuracy" also apply to full screen video

Operating System: Arch Linux 
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Kernel Version: 6.14.4-zen1-2-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 15.0 GiB of RAM
Graphics Processor 1: AMD Radeon RX 6600M
Graphics Processor 2: AMD Radeon Graphics

ADDITIONAL INFORMATION
I saw this issue both with mpv and firefox video player
Comment 1 Bug Janitor Service 2025-05-05 17:07:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7587
Comment 2 Zamundaaa 2025-05-06 00:42:34 UTC
Git commit 6846a369d6a7ca5d713e6a60842e5fc18372ba63 by Xaver Hugl.
Committed on 05/05/2025 at 17:06.
Pushed by zamundaaa into branch 'master'.

backends/drm: with "prefer color accuracy", don't allow direct scaonut with color ops

M  +3    -0    src/backends/drm/drm_egl_layer.cpp

https://invent.kde.org/plasma/kwin/-/commit/6846a369d6a7ca5d713e6a60842e5fc18372ba63
Comment 3 Zamundaaa 2025-05-06 14:02:01 UTC
Git commit 6dcac58cd9ee691ece2ac69b2f1ddb689c6d79ad by Xaver Hugl.
Committed on 06/05/2025 at 13:38.
Pushed by zamundaaa into branch 'Plasma/6.3'.

backends/drm: with "prefer color accuracy", don't allow direct scaonut with color ops
(cherry picked from commit 6846a369d6a7ca5d713e6a60842e5fc18372ba63)

M  +3    -0    src/backends/drm/drm_egl_layer.cpp

https://invent.kde.org/plasma/kwin/-/commit/6dcac58cd9ee691ece2ac69b2f1ddb689c6d79ad