backends/drm: with "prefer color accuracy", don't allow direct scaonut with color ops

BUG: 503742